--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "vue-openpaas-components",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e"
@@ -14,6 +11,7 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
+  "main": "src/index.js",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^3.0.0",
     "@vue/cli-plugin-babel": "^3.1.0",
