--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.5.17",
     "vuetify": "^1.3.5"
+  },
+  "vue": {
+    "transpileDependencies": [
+      "vuetify"
+    ]
   }
 }
